--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,7 +2,7 @@
     /* Colors */
     --color-black: #000000;
     --color-white: #FFFFFF;
-    --color-grey: #757575;
+    --color-grey: #595959;
     --color-darkgreen: #4A5912;
     --color-green: #9CA344;
     --color-blue: #6C8DA9;
